# Ubuntu16.04-FlyCapture-OpenCV

./: CMakeLists.txt  README.md
include/: FLIR.h
src/: camnode.cpp
